--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,39 +1,18 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+.placeholder {
+  min-width: 100px;
+  min-height: 100px;
+  border: 1px solid #000;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.right-side {
+  flex: 1 0 50vw;
+
+  border: 1px solid #000;
 }
